// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal rendering is renders correctly 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH hNVVMj"
    size="md"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      <div
        className="sc-bxivhb kimRTT"
      >
        <h5>
          modalHeader
        </h5>
        <button
          onClick={[Function]}
        />
      </div>
      <div
        className="sc-htpNat cdmvmB"
      />
      <div
        className="sc-ifAKCX kOZAnx"
      >
        modalFooter
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal rendering is renders correctly size lg 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH czYgep"
    size="lg"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      
      <div
        className="sc-htpNat cdmvmB"
      />
      
    </div>
  </div>
</div>
`;

exports[`Modal rendering is renders correctly size login 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH gRXUpo"
    size="login"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      
      <div
        className="sc-htpNat cdmvmB"
      />
      
    </div>
  </div>
</div>
`;

exports[`Modal rendering is renders correctly size null 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH gpkSsi"
    size="null"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      
      <div
        className="sc-htpNat cdmvmB"
      />
      
    </div>
  </div>
</div>
`;

exports[`Modal rendering is renders correctly size xl 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH dmZbNq"
    size="xl"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      
      <div
        className="sc-htpNat cdmvmB"
      />
      
    </div>
  </div>
</div>
`;

exports[`Modal rendering is renders correctly with header 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH hNVVMj"
    size="md"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      <div
        className="sc-bxivhb kimRTT"
      >
        <div>
          header
        </div>
        <button
          onClick={[Function]}
        />
      </div>
      <div
        className="sc-htpNat cdmvmB"
      />
      
    </div>
  </div>
</div>
`;

exports[`Modal rendering is renders correctly without header size sm 1`] = `
<div
  className="sc-bdVaJa kxpWPG"
>
  <div
    className="sc-bwzfXH gpkSsi"
    size="sm"
  >
    <div
      className="sc-gzVnrw brJaDo"
    >
      
      <div
        className="sc-htpNat cdmvmB"
      />
      
    </div>
  </div>
</div>
`;
